--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img id="logo" src="logoB.svg" alt="" srcset="" />
+        <img id="logo" src="logoM.svg" alt="" srcset="" />
         <nav>
             <ul>
                 <li>
@@ -23,17 +23,20 @@
                 </li>
             </ul>
         </nav>
-        <section>
-            <img src="" alt="" srcset="">
-            <div>
-                <img src="logoB.svg" alt="logo" srcset="">
-                <h1>Des bougies qui racontent une histoire</h1>
-            </div>
-        </section>
+        
     </header>
       <main>
-
-        <section>
+        <section class="section1">
+            <div>
+                <img id="fleur" src="bougie_fleur (2).jpg" alt="" srcset="">
+                <div  class="div1">
+                    <img src="logoB.svg" alt="logo" srcset="">
+                    <h1>Des bougies qui racontent une histoire</h1>
+                </div>
+              
+            </div>
+        </section>
+        <section class="section2">
             <h2>Pourquoi acheter nos bougies?</h2>
             <p>Bienvenue chez Lueur & Parfum, une boutique artisanale où chaque bougie est coulée à la main avec amour. Nos
                 parfums sont inspirés de la nature, des saisons et des souvenirs...</p>
