--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </section>
         <section class="section2">
             <h2>Pourquoi acheter nos bougies?</h2>
-            <p>Bienvenue chez Lueur & Parfum, une boutique artisanale où chaque bougie est coulée à la main avec amour. Nos
-                parfums sont inspirés de la nature, des saisons et des souvenirs...</p>
+            <p>Bienvenue chez Lueur & Parfum, une boutique artisanale où chaque bougie est coulée à la main avec amour. 
+                Nos parfums sont inspirés de la nature, des saisons et des souvenirs...</p>
                 <div class="valeurs">
                     <div class="valeur"> 
                         <img src="plant.svg" alt="" srcset="">
@@ -84,7 +84,7 @@
                 <div class="card" >
                     <img class="bougie" src="cerisier.png" alt="parfum">
                     <h4>Rose Antique</h4>
-                    <h5>29,90 €</h5>
+                    <h5>39,50 €</h5>
                     <p>
                         Douceur florale avec une touche poudrée.
 
