--- a/Apropos.html
+++ b/Apropos.html
@@ -50,7 +50,8 @@
                 
                         </div>
 
-                        <div><img src="planner.png" alt="" srcset=""></div>
+                        <div>
+                            <img src="planner.png" alt="" srcset=""></div>
                         <p>Chaque bougie est réalisée à la main, du mélange
                             des parfums jusqu’au coulage de la cire. Nous
                             utilisons exclusivement de la cire végétale, des
@@ -98,6 +99,27 @@
                                         minutie</p>
                                     </div>
                     </section>
+
+                    <!-- here -->
+
+                    <p class="p2">Lueur & Parfum est née d'une passion pour les ambiances chaleureuses, les senteurs 
+                        réconfortantes et le 
+                        travail 
+                        bien fait. Derrière chaque bougie se cache une envie de créer un instant de calme, de beauté et de 
+                        connexion.                Toutes nos bougies sont pensées, coulées et emballées avec soin dans notre petit atelier, situé en 
+                        France. Nous 
+                        croyons en une consommation plus douce, plus lente, et plus respectueuse.</p>      
+                      </section> 
+
+                      <p class="p2">Lueur & Parfum est née d'une passion pour les ambiances chaleureuses, les senteurs 
+                        réconfortantes et le 
+                        travail 
+                        bien fait. Derrière chaque bougie se cache une envie de créer un instant de calme, de beauté et de 
+                        connexion.                Toutes nos bougies sont pensées, coulées et emballées avec soin dans notre petit atelier, situé en 
+                        France. Nous 
+                        croyons en une consommation plus douce, plus lente, et plus respectueuse.</p>        </section> 
+*        
+        
 
                     <footer>
                         <img src="logoB.svg" alt="" srcset="">
