--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">À propos</a>
+                    <a href="http://127.0.0.1:5501/Apropos.html">À propos</a>
                 </li>
                 <li>
                     <a href="">Boutique</a>
